# dynamic-string

./: .gitignore  CMakeLists.txt  README.md  dynamic-string.c  dynamic-string.h  main.c
include/: dynamic_string.h  portable_attributes.h
src/: dynamic_string.c  main.c
